--- a/BlazorBattles/Client/Pages/Register.razor
+++ b/BlazorBattles/Client/Pages/Register.razor
@@ -1,7 +1,8 @@
 ﻿@page "/register"
 @inject IUnitService UnitService
-@inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
+@inject IAuthService AuthService
+@inject IToastService ToastService
 
 <h3>Register</h3>
 
@@ -37,7 +38,7 @@
         <InputRadioGroup id="startUnit" @bind-Value="user.StartUnitId" class="form-control">
             @foreach (var unit in UnitService.Units)
            {
-               <InputRadio Value="@unit.Id" /> <span>@unit.Title</span> @unit.Title <br/>
+               <InputRadio Value="@unit.Id" /> <span>@unit.Title</span> <br/>
            }
         </InputRadioGroup>
     </div>
@@ -66,9 +67,18 @@
         await UnitService.LoadUnitsAsync();
     }
 
-    void HandleRegistration()
+    async void HandleRegistration()
     {
-        JSRuntime.InvokeVoidAsync("console.log", "This is the great new user: ",user);
-        NavigationManager.NavigateTo("login");
+        var result = await AuthService.Register(user);
+
+        if (result.Success)
+        {
+            ToastService.ShowSuccess(result.Message);
+            NavigationManager.NavigateTo("/");
+        }
+        else
+        {
+            ToastService.ShowError(result.Message);
+        }
     }
 }
