--- a/BlazorBattles/Client/Pages/Army.razor
+++ b/BlazorBattles/Client/Pages/Army.razor
@@ -50,6 +50,7 @@ else
     protected override async Task OnInitializedAsync()
     {
         await UnitService.LoadUnitsAsync();
+        await UnitService.LoadUserUnitsAsync();
     }
 
 }
