end of section 8

--- a/BlazorBattles/Client/Pages/Army.razor
+++ b/BlazorBattles/Client/Pages/Army.razor
@@ -39,6 +39,11 @@
             </tr>
         }
     </table>
+    <center>
+        <button class="btn btn-warning" @onclik="ReviveArmy">
+            Revive Your Army for 1000 Bananas
+        </button>
+    </center>
 }
 else
 {
@@ -53,4 +58,8 @@ else
         await UnitService.LoadUserUnitsAsync();
     }
 
+    private async Task ReviveArmy()
+    {
+        await UnitService.ReviveArmy();
+    }
 }
